--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -315,7 +315,25 @@
 		"make_primary": "Make Primary",
 		"verify": "Verify",
 		"no_emai_set": "No email set",
-		"error_change_password": "Error changing password. Please check your current password and try again."
+		"error_change_password": "Error changing password. Please check your current password and try again.",
+		"mfa_disabled": "Multi-factor authentication disabled successfully!",
+		"mfa_page_title": "Multi-factor Authentication",
+		"enable_mfa": "Enable MFA",
+		"disable_mfa": "Disable MFA",
+		"mfa_not_enabled": "MFA is not enabled",
+		"mfa_enabled": "Multi-factor authentication enabled successfully!",
+		"copy": "Copy",
+		"recovery_codes": "Recovery Codes",
+		"recovery_codes_desc": "These are your recovery codes. Keep them safe. You will not be able to see them again.",
+		"reset_session_error": "Please logout and back in to refresh your session and try again.",
+		"authenticator_code": "Authenticator Code",
+		"email_verified": "Email verified successfully!",
+		"email_verified_success": "Your email has been verified. You can now log in.",
+		"email_verified_error": "Error verifying email",
+		"email_verified_erorr_desc": "Your email could not be verified. Please try again.",
+		"invalid_code": "Invalid MFA code",
+		"invalid_credentials": "Invalid username or password",
+		"mfa_required": "Multi-factor authentication is required"
 	},
 	"collection": {
 		"collection_created": "Collection created successfully!",
